# simple-fullstack-app

./: Procfile  README.md  data_dump.json  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/core/: admin.py  api.py  models.py
backend/core/management/commands/: import_data.py
backend/core/migrations/: 0001_initial.py
frontend/: import-users.js  package-lock.json  package.json
frontend/src/: theme.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/[auth0]/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/orders/[orderId]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: DashboardPreview.tsx  StatusBadge.tsx
frontend/src/contexts/: OrderProvider.tsx
frontend/src/services/: api.ts  index.ts
